<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth RSSI Analyst</string>
    <string name="version">version 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="on">Turn On     </string>
    <string name="off">Turn Off    </string>
    <string name="Scan">Scan Devices</string>
    <string name="Visible">Get Visible </string>
    <string name="List">List Devices</string>
</resources>


