<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize = "19sp"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="on"
                android:text="@string/on" />

            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="visible"
                android:text="@string/Visible" />

            <Button
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="scan"
                android:text="@string/Scan" />

            <Button
                android:id="@+id/button4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="list"
                android:text="@string/List" />

            <Button
                android:id="@+id/button5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:onClick="off"
                android:text="@string/off" />

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible" >

            </ListView>


        </LinearLayout>

</RelativeLayout>

